Setup course list page

--- a/src/courses/courselist/templates/landing_page.html
+++ b/src/courses/courselist/templates/landing_page.html
@@ -5,5 +5,6 @@
 </head>
 <body>
     <h1>Welcome to Deroyale Course App</h1>
+    <a href="{% url 'course_list' %}">Get Started</a>
 </body>
 </html>
