--- a/src/courses/courselist/templates/landing_page.html
+++ b/src/courses/courselist/templates/landing_page.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Welcome to Our Landing Page</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
     <h1>Welcome to Deroyale Course App</h1>
     <a href="{% url 'course_list' %}">Get Started</a>
-</body>
-</html>
+{% endblock %}
