Add form to add courses

--- a/src/courses/courselist/templates/course_list.html
+++ b/src/courses/courselist/templates/course_list.html
@@ -7,4 +7,5 @@
         <li>{{ course.name }}</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'add_course' %}">Add New Course</a>
 {% endblock %}
