Add internal css

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -6,8 +6,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeRoyale Courses</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}"> -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,500;0,700;1,100&family=Lato:wght@400;700;900&family=Lobster&family=Rubik:wght@300;400&display=swap" rel="stylesheet">
+    <style>
+        body {
+            background-color: #181818;
+            color: #f8f8f8;
+        }
+
+        .primary {
+            color: #ffb267;
+        }
+
+        .secondary {
+            color: #f8f8f8;
+        }
+
+        .grey {
+            color: #181818;
+        }
+
+        .light-grey {
+            color: #656469;
+        }
+    </style>
 </head>
 <body>
     {% block content %}{% endblock %}
