Style landing page

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -29,6 +29,44 @@
         .light-grey {
             color: #656469;
         }
+
+        .row {
+            display: flex;
+            flex-direction: row;
+        }
+
+        .column {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .just-center{
+            justify-content: center;
+        }
+
+        .align-center {
+            align-items: center;
+        }
+
+        .landing {
+            margin-top: 25vh;
+            justify-content: space-between;
+            height: 70vh;
+        }
+
+        .landing-text {
+            font-size: 2rem;
+            margin-top: -5vh;
+        }
+
+        .get-started {
+            padding: 20px;
+            background-color: #ffb267;
+            color: #181818;
+            border-radius: 12px;
+            text-decoration: none;
+            width: 80vw;
+        }
     </style>
 </head>
 <body>
