Setup footer icons

--- a/src/courses/courselist/templates/course_list.html
+++ b/src/courses/courselist/templates/course_list.html
@@ -8,4 +8,10 @@
         {% endfor %}
     </ul>
     <a href="{% url 'add_course' %}">Add New Course</a>
+    <footer class="footer-icons row">
+        <a href=""><i class="fa-solid fa-house"></i></a>
+        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href=""><i class="fa-solid fa-list"></i></a>
+        <a href=""><i class="fa-solid fa-user"></i></a>
+    </footer>
 {% endblock %}
