--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,500;0,700;1,100&family=Lato:wght@300;700;900&family=Lobster&family=Manrope:wght@200;400&family=Roboto&family=Rubik&display=swap" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,500;0,700;1,100&family=Lato:wght@400;700;900&family=Lobster&family=Rubik:wght@300;400&display=swap" rel="stylesheet"> -->
+    <script src="https://kit.fontawesome.com/dcdd89c74c.js" crossorigin="anonymous"></script>
     <style>
         * {
             font-family: 'Manrope', sans-serif;
@@ -74,6 +74,26 @@
             border-radius: 12px;
             text-decoration: none;
             width: 80vw;
+        }
+
+        .footer-icons {
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            width: 80vw;
+            margin-left: 10vw;
+            padding-bottom: 10px;
+        }
+
+        .footer-icons a {
+            color: #f8f8f8;
+            text-decoration: none;
+        }
+
+        .footer-icons a:hover{
+            color: #ffb267;
         }
     </style>
 </head>
