--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -76,15 +76,40 @@
             width: 80vw;
         }
 
+        .course-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            gap: 2vw;
+            list-style: none;
+            margin: 0;
+            padding: 3vw;
+        }
+
+        .course {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            width: 42vw;
+            height: 50vw;
+            border-radius: 24px;
+            background-color: #202020;
+        }
+
+        .course:hover {
+            border: 1px solid #ffb267;
+        }
+
         .footer-icons {
             justify-content: space-between;
             align-items: center;
             position: fixed;
             bottom: 0;
             left: 0;
-            width: 80vw;
-            margin-left: 10vw;
-            padding-bottom: 10px;
+            width: 100vw;
+            padding: 16px 5vw;
+            background-color: #181818;
         }
 
         .footer-icons a {
