Style add course button

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -76,6 +76,28 @@
             width: 80vw;
         }
 
+        .course-heading {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0vw 5vw;
+        }
+
+        .add-course {
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: #ffb267 2px solid;
+            height: 50px;
+            width: 50px;
+            text-decoration: none;
+        }
+
+        .add-course:hover {
+            border: #656469 2px solid;
+        }
+
         .course-list {
             display: flex;
             flex-wrap: wrap;
@@ -92,13 +114,17 @@
             justify-content: space-around;
             align-items: center;
             width: 42vw;
-            height: 50vw;
+            height: 45vw;
             border-radius: 24px;
             background-color: #202020;
         }
 
         .course:hover {
             border: 1px solid #ffb267;
+        }
+
+        .empty {
+            height: 7vh;
         }
 
         .footer-icons {
@@ -108,7 +134,7 @@
             bottom: 0;
             left: 0;
             width: 100vw;
-            padding: 16px 5vw;
+            padding: 16px 8vw;
             background-color: #181818;
         }
 
