--- a/src/courses/courselist/templates/course_list.html
+++ b/src/courses/courselist/templates/course_list.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="course-heading">
+        <div>
+            <h2> 5 Courses</h2>
+            <p class="light-grey">20 Topics</p>
+        </div>
+        <a href="{% url 'add_course' %}" class="primary add-course"><i class="fa-solid fa-plus fa-2x primary"></i></i></a>
+    </div>
     <ul class="course-list">
         {% for course in courses %}
-        <li class="course">{{ course.name }}</li>
+        <li class="course">{{ course.name }} <span class="light-grey">5 topics</span></li>
         {% endfor %}
     </ul>
-    <a href="{% url 'add_course' %}">Add New Course</a>
+    <div class="empty"></div>
     <footer class="footer-icons row">
         <a href=""><i class="fa-solid fa-house"></i></a>
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
