Add footer to add course page

--- a/src/courses/courselist/templates/add_course.html
+++ b/src/courses/courselist/templates/add_course.html
@@ -7,4 +7,10 @@
         {{ form.as_p }}
         <input type="submit" value="Add Course">
     </form>
+    <footer class="footer-icons row">
+        <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
+        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="{% url 'course_list' %}"><i class="fa-solid fa-list"></i></a>
+        <a href=""><i class="fa-solid fa-user"></i></a>
+    </footer>
 {% endblock %}
