--- a/src/courses/courselist/templates/course_list.html
+++ b/src/courses/courselist/templates/course_list.html
@@ -15,9 +15,9 @@
     </ul>
     <div class="empty"></div>
     <footer class="footer-icons row">
-        <a href=""><i class="fa-solid fa-house"></i></a>
+        <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
         <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
-        <a href=""><i class="fa-solid fa-list"></i></a>
+        <a href="{% url 'course_list' %}"><i class="fa-solid fa-list"></i></a>
         <a href=""><i class="fa-solid fa-user"></i></a>
     </footer>
 {% endblock %}
