--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -127,6 +127,46 @@
             height: 7vh;
         }
 
+        .text-field {
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            border-bottom: 1px solid #ffb267;
+            background-color: transparent;
+            width: 60%;
+            margin-left: 2vw;
+        }
+
+        .text-field:focus {
+            outline: none;
+        }
+
+        .select-field {
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            border-bottom: 1px solid #ffb267;
+            background-color: transparent;
+            margin-left: 2vw;
+            width: 30%;
+        }
+
+        .select-field:focus {
+            outline: none;
+        }
+
+        .select-field option {
+            background-color: #181818;
+            color: #f8f8f8;
+            font-size: 0.8rem;
+            padding-left: 10px;
+        }
+
+        .add {
+            width: 25vw;
+            padding: 10px;
+        }
+
         .footer-icons {
             justify-content: space-between;
             align-items: center;
