Style course detail page

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -22,6 +22,10 @@
             color: #f8f8f8;
         }
 
+        a {
+            text-decoration: none;
+        }
+
         .primary {
             color: #ffb267;
         }
