Style course detail page

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -171,6 +171,23 @@
             padding: 10px;
         }
 
+        .topics {
+            margin: 0;
+            padding: 0;
+        }
+
+        .topic-item {
+            justify-content: space-between;
+            border: 1px solid #656469;
+            padding: 0px 10px;
+            margin: 5px 0;
+
+        }
+
+        .topic-duration {
+            flex-basis: 80%;
+        }
+
         .footer-icons {
             justify-content: space-between;
             align-items: center;
