--- a/src/courses/courselist/templates/add_topics.html
+++ b/src/courses/courselist/templates/add_topics.html
@@ -1,6 +1,24 @@
-<h2>Add Topics for {{ course.name }}</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add Topic</button>
-</form>
+{% extends 'base.html' %}
+
+{% block content %}
+    <div class="course-heading">
+        <a href="{% url 'course_list' %}" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
+        <div>
+            <h2>Add a new topic for {{ course.name }}</h2>
+        </div>
+        <div></div>
+    </div>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit" class="get-started add row just-center">Add</button>
+    </form>
+
+    <div class="empty"></div>
+    <footer class="footer-icons row">
+        <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
+        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="{% url 'course_list' %}"><i class="fa-solid fa-list"></i></a>
+        <a href=""><i class="fa-solid fa-user"></i></a>
+    </footer>
+{% endblock %}
