--- a/src/courses/courselist/templates/course_list.html
+++ b/src/courses/courselist/templates/course_list.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div class="course-heading">
         <div>
-            <h2>5 Courses</h2>
+            <h2>{{ courses_count }} Courses</h2>
             <p class="light-grey">{{ total_topics_count }} Topics</p>
         </div>
         <a href="{% url 'add_course' %}" class="primary add-course"><i class="fa-solid fa-plus fa-2x primary"></i></i></a>
