Add duration to topics

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -166,6 +166,20 @@
             padding-left: 10px;
         }
 
+        .number-field {
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            border-bottom: 1px solid #ffb267;
+            background-color: transparent;
+            margin-left: 2vw;
+            width: 30%;
+        }
+
+        .number-field:focus {
+            outline: none;
+        }
+
         .add {
             width: 25vw;
             padding: 10px;
