Add delete button for courses

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -202,6 +202,19 @@
             flex-basis: 80%;
         }
 
+        .delete-course {
+            border: 1px solid rgb(197, 0, 0);
+            color: rgb(197, 0, 0);
+            justify-content: center;
+            margin: auto;
+            padding: auto;
+        }
+
+        .delete-course:hover {
+            color: #181818;
+            background-color: rgb(197, 0, 0);
+        }
+
         .footer-icons {
             justify-content: space-between;
             align-items: center;
