--- a/src/courses/courselist/templates/course_detail.html
+++ b/src/courses/courselist/templates/course_detail.html
@@ -19,6 +19,9 @@
             </div>
         </li>
         {% endfor %}
+        <li class="row topic-item delete-course">
+                <p>Delete {{ course.name }} course &nbsp;&nbsp;&nbsp;<i class="fa-regular fa-trash-can"></i></p>
+        </li>
     </ol>
 
     <div class="empty"></div>
