Add delete icons for topics

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -192,19 +192,20 @@
 
         .topic-item {
             justify-content: space-between;
+            align-items: center;
             border: 1px solid #656469;
             padding: 0px 10px;
             margin: 5px 0;
-
         }
 
         .topic-duration {
-            flex-basis: 80%;
+            flex-basis: 70%;
         }
 
         .delete-course {
-            border: 1px solid rgb(197, 0, 0);
-            color: rgb(197, 0, 0);
+            border: 1px solid #ffb267;
+            color: #ffb267;
+            font-size: 1.2rem;
             justify-content: center;
             margin: auto;
             padding: auto;
@@ -212,7 +213,7 @@
 
         .delete-course:hover {
             color: #181818;
-            background-color: rgb(197, 0, 0);
+            background-color: #ffb267;
         }
 
         .footer-icons {
