--- a/src/courses/courselist/templates/course_detail.html
+++ b/src/courses/courselist/templates/course_detail.html
@@ -17,10 +17,11 @@
                 <p>{{ topic.title }}</p>
                 <p class="primary">{{ topic.duration }} mins</p>
             </div>
+            <i class="fa-regular fa-trash-can primary"></i>
         </li>
         {% endfor %}
         <li class="row topic-item delete-course">
-                <p>Delete {{ course.name }} course &nbsp;&nbsp;&nbsp;<i class="fa-regular fa-trash-can"></i></p>
+            <p>Delete {{ course.name }} course &nbsp;&nbsp;&nbsp;<i class="fa-regular fa-trash-can fa-1.5x"></i></p>
         </li>
     </ol>
 
