--- a/src/courses/courselist/templates/course_detail.html
+++ b/src/courses/courselist/templates/course_detail.html
@@ -20,9 +20,11 @@
             <i class="fa-regular fa-trash-can primary"></i>
         </li>
         {% endfor %}
+        <a href="{% url 'delete_course' course.id %}">
         <li class="row topic-item delete-course">
             <p>Delete {{ course.name }} course &nbsp;&nbsp;&nbsp;<i class="fa-regular fa-trash-can fa-1.5x"></i></p>
         </li>
+        </a>
     </ol>
 
     <div class="empty"></div>
