--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -216,6 +216,51 @@
             background-color: #ffb267;
         }
 
+        .delete-confirm {
+            margin-top: 35vh;
+        }
+
+        .yes-no {
+            margin-top: 5vh;
+            gap: 10vw;
+        }
+
+        .yes {
+            border: 1px solid #ffb267;
+            color: #181818;
+            font-size: 1.2rem;
+            justify-content: center;
+            margin: auto;
+            padding: auto;
+            background-color: #ffb267;
+            width: 80px;
+            height: 35px;
+        }
+
+        .yes:hover {
+            border: 1px solid red;
+            color: white;
+            background-color: red;
+        }
+
+        .no {
+            border: 1px solid #ffb267;
+            color: #ffb267;
+            font-size: 1.2rem;
+            justify-content: center;
+            margin: auto;
+            padding: auto;
+            background-color: transparent;
+            width: 80px;
+            height: 35px;
+        }
+
+        .no:hover {
+            border: 1px solid #ffb267;
+            color: #181818;
+            background-color: #ffb267;
+        }
+
         .footer-icons {
             justify-content: space-between;
             align-items: center;
