Add delete topic functionality

--- a/src/courses/courselist/templates/course_detail.html
+++ b/src/courses/courselist/templates/course_detail.html
@@ -17,7 +17,7 @@
                 <p>{{ topic.title }}</p>
                 <p class="primary">{{ topic.duration }} mins</p>
             </div>
-            <i class="fa-regular fa-trash-can primary"></i>
+            <a href="{% url 'delete_topic' courselist_id=course.id topic_id=topic.id %}"><i class="fa-regular fa-trash-can primary"></i></a>
         </li>
         {% endfor %}
         <a href="{% url 'delete_course' course.id %}">
