Add eedit topic functionality

--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -87,6 +87,10 @@
             padding: 0vw 5vw;
         }
 
+        .topic-title {
+            flex-basis: 70%;
+        }
+
         .add-course {
             border-radius: 50%;
             display: flex;
@@ -180,6 +184,18 @@
             outline: none;
         }
 
+        .text-area-field {
+            display: flex;
+            border: 1px solid#ffb267;
+            background-color: #181818;
+            color: #f8f8f8;
+            width: 100%;
+        }
+
+        .text-area-field:focus {
+            outline: none;
+        }
+
         .add {
             width: 25vw;
             padding: 10px;
@@ -259,6 +275,12 @@
             border: 1px solid #ffb267;
             color: #181818;
             background-color: #ffb267;
+        }
+
+        .note {
+            width: 85vw;
+            margin: auto;
+            padding: auto;
         }
 
         .footer-icons {
