--- a/src/courses/courselist/templates/delete_topic.html
+++ b/src/courses/courselist/templates/delete_topic.html
@@ -4,7 +4,7 @@
     <div class="column just-center align-center delete-confirm">
         <p>Are you sure you want to delete <span class="primary">{{ topic.title }}</span> topic?</p>
         <div class="row yes-no">
-            <a href="{% url 'course_detail' course.id %}" class="no row align-center just-center">No</a>
+            <a href="{% url 'topic_detail' courselist_id=course.id topic_id=topic.id %}" class="no row align-center just-center">No</a>
             <form method="post">
                 {% csrf_token %}
                 <button type="submit" class="yes">Yes</button>
