Setup some links

--- a/src/courses/courselist/templates/edit_topic.html
+++ b/src/courses/courselist/templates/edit_topic.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="course-heading">
-        <a href="{% url 'course_list' %}" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
+        <a href="../" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
         <div>
             <h2>Edit {{ topic.title }}topic</h2>
         </div>
