--- a/src/courses/courselist/templates/add_topics.html
+++ b/src/courses/courselist/templates/add_topics.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="course-heading">
-        <a href="{% url 'course_list' %}" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
+        <a href="../" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
         <div>
             <h2>Add a new topic for {{ course.name }}</h2>
         </div>
