--- a/src/courses/courselist/templates/delete_course.html
+++ b/src/courses/courselist/templates/delete_course.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="column just-center align-center delete-confirm">
-        <p>Are you sure you want to delete <span class="primary">{{ course.name }}</span> course and all its topics?</p>
+        <p style="text-align: center;">Are you sure you want to delete <span class="primary">{{ course.name }}</span> course and all its topics?</p>
         <div class="row yes-no">
             <a href="{% url 'course_detail' course.id %}" class="no row align-center just-center">No</a>
             <form method="post">
