--- a/src/courses/courselist/templates/add_course.html
+++ b/src/courses/courselist/templates/add_course.html
@@ -15,7 +15,7 @@
     </form>
     <footer class="footer-icons row">
         <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
-        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="{% url 'course_list' %}"><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
         <a href="{% url 'course_list' %}"><i class="fa-solid fa-list"></i></a>
         <a href=""><i class="fa-solid fa-user"></i></a>
     </footer>
