Setup links in edit topic view

--- a/src/courses/courselist/templates/edit_topic.html
+++ b/src/courses/courselist/templates/edit_topic.html
@@ -18,7 +18,7 @@
     <div class="empty"></div>
     <footer class="footer-icons row">
         <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
-        <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+        <a href="../"><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
         <a href=""><i class="fa-solid fa-list"></i></a>
         <a href=""><i class="fa-solid fa-user"></i></a>
     </footer>
