--- a/src/courses/courselist/templates/base.html
+++ b/src/courses/courselist/templates/base.html
@@ -1,18 +1,17 @@
-{% load static %}
-
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeRoyale Courses</title>
-    <!-- <link rel="stylesheet" href="{% static 'css/styles.css' %}"> -->
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,500;0,700;1,100&family=Lato:wght@300;700;900&family=Lobster&family=Manrope:wght@200;400&family=Roboto&family=Rubik&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dcdd89c74c.js" crossorigin="anonymous"></script>
     <style>
-        * {
+        /* * {
             font-family: 'Manrope', sans-serif;
             box-sizing: border-box;
         }
@@ -301,7 +300,7 @@
 
         .footer-icons a:hover{
             color: #ffb267;
-        }
+        } */
     </style>
 </head>
 <body>
