--- a/src/courses/courselist/templates/course_detail.html
+++ b/src/courses/courselist/templates/course_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
     <div class="course-heading">
@@ -6,6 +7,7 @@
             <h2>{{ course.name }}</h2>
             <p class="light-grey">{{ topics_count }} Topics</p>
         </div>
+        <img src="{% static 'images/python.svg' %}" alt="course icon" class="icon-image1">
         <a href="{% url 'add_topics' course.id %}" class="primary add-course"><i class="fa-solid fa-plus fa-2x primary"></i></i></a>
     </div>
 
