Setup background images

--- a/src/courses/courselist/templates/course_list.html
+++ b/src/courses/courselist/templates/course_list.html
@@ -3,6 +3,8 @@
 {% load static %}
 
 {% block content %}
+    <div class="course-list-back"></div>
+    <div class="course-list-overlay"></div>
     <div class="course-heading">
         <div>
             <h2>{{ courses_count }} Courses</h2>
