--- a/src/courses/courselist/templates/edit_topic.html
+++ b/src/courses/courselist/templates/edit_topic.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="course-heading">
-        <a href="../" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
+        <a href="../.." class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
         <div>
             <h2>Edit {{ topic.title }}topic</h2>
         </div>
@@ -18,8 +18,8 @@
     <div class="empty"></div>
     <footer class="footer-icons row">
         <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
-        <a href="../"><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
-        <a href=""><i class="fa-solid fa-list"></i></a>
+        <a href="../.."><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
+        <a href="../.."><i class="fa-solid fa-list"></i></a>
         <a href=""><i class="fa-solid fa-user"></i></a>
     </footer>
 {% endblock %}
