--- a/src/courses/courselist/static/css/styles.css
+++ b/src/courses/courselist/static/css/styles.css
@@ -6,10 +6,16 @@
 body {
     background-color: #181818;
     color: #f8f8f8;
+    margin: 0;
+    padding: 0;
 }
 
 a {
     text-decoration: none;
+}
+
+form {
+    padding: 2vw;
 }
 
 .primary {
@@ -46,15 +52,23 @@ a {
     align-items: center;
 }
 
+.landing-back {
+    background-image: url('images/back2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-position: center;
+}
+
 .landing {
-    margin-top: 25vh;
     justify-content: space-between;
-    height: 70vh;
+    height: 100vh;
+    background-color: #18181886;
 }
 
 .landing-text {
     font-size: 2rem;
-    margin-top: -5vh;
+    margin-top: -8vh;
 }
 
 .get-started {
@@ -64,6 +78,38 @@ a {
     border-radius: 12px;
     text-decoration: none;
     width: 80vw;
+    margin-bottom: 5vh;
+}
+
+.course-list-back {
+    background-image: url('images/back3.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    background-position: center;
+    display: flex;
+    z-index: -2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.course-list-overlay {
+    background-color: #181818d5;
+    height: 100vh;
+    display: flex;
+    z-index: -1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.detail-overlay {
+    background-color: #181818ea;
 }
 
 .course-heading {
@@ -188,6 +234,7 @@ a {
     background-color: #181818;
     color: #f8f8f8;
     width: 100%;
+    padding: 2vw;
 }
 
 .text-area-field:focus {
@@ -209,7 +256,8 @@ a {
     align-items: center;
     border: 1px solid #656469;
     padding: 0px 10px;
-    margin: 5px 0;
+    margin: 5px auto;
+    width: 95%;
 }
 
 .topic-duration {
