--- a/src/courses/courselist/templates/course_detail.html
+++ b/src/courses/courselist/templates/course_detail.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% block content %}
+    <div class="course-list-back"></div>
+    <div class="course-list-overlay detail-overlay"></div>
     <div class="course-heading">
         <div>
             <h2>{{ course.name }}</h2>
