Finish styling about page

--- a/src/courses/courselist/templates/about.html
+++ b/src/courses/courselist/templates/about.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <div class="course-list-back"></div>
+    <div class="course-list-overlay"></div>
     <div class="column align-center">
         <div class="course-heading">
                 <div class="column align-center">
