--- a/src/courses/courselist/templates/about.html
+++ b/src/courses/courselist/templates/about.html
@@ -6,14 +6,14 @@
     <div class="column align-center">
         <div class="course-heading">
                 <div class="column align-center">
-                    <p style="color: #f8f8f8; font-size: 2.5rem; font-weight: 700; font-family: 'Josefin Sans', sans-serif;">DeRoy<span style="color: #ffb267;">@</span>l&#233;</p>
+                    <p style="color: #f8f8f8; font-size: 2.5rem; font-weight: 700; font-family: 'Josefin Sans', sans-serif;">DeRoy<span style="color: #ffb267;" class="deroyale-at1">@</span>l&#233;</p>
                 </div>
             <div></div>
         </div>
-        
-        <p style="text-align: center; font-size: 1.3rem;">At our company, we specialize in crafting cutting-edge web and mobile apps that blend innovation with usability. With a dedicated team of skilled designers and developers, we strive to create seamless and intuitive digital experiences, empowering businesses to thrive in the ever-evolving digital landscape.</p>
+
+        <p class="about-text" style="text-align: center; font-size: 1.3rem;">At our company, we specialize in crafting cutting-edge web and mobile apps that blend innovation with usability. With a dedicated team of skilled designers and developers, we strive to create seamless and intuitive digital experiences, empowering businesses to thrive in the ever-evolving digital landscape.</p>
         <p style="font-size: 1.3rem; font-weight: 700;">CONNECT WITH US</p>
-        <div class="row align-center" style="justify-content: space-evenly; width: 100%;">
+        <div class="row align-center connect-icons">
             <a href="https://github.com/Uthmanbello" target="_blank"><i class="fa-brands fa-github fa-2x primary"></i></a>
             <a href="https://www.linkedin.com/in/uthmanbelloimoukhuede" target="_blank"><i class="fa-brands fa-linkedin fa-2x primary"></i></a>
             <a href="https://www.twitter.com/UthmanDeRoyale" target="_blank"><i class="fa-brands fa-twitter fa-2x primary"></i></a>
