--- a/src/courses/courselist/templates/add_course.html
+++ b/src/courses/courselist/templates/add_course.html
@@ -17,6 +17,6 @@
         <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
         <a href="{% url 'course_list' %}"><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
         <a href="{% url 'course_list' %}"><i class="fa-solid fa-list"></i></a>
-        <a href=""><i class="fa-solid fa-user"></i></a>
+        <a href="{% url 'about' %}"><i class="fa-solid fa-info"></i></a>
     </footer>
 {% endblock %}
