--- a/src/courses/courselist/templates/topic_detail.html
+++ b/src/courses/courselist/templates/topic_detail.html
@@ -19,6 +19,6 @@
         <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
         <a href="{% url 'course_detail' courselist_id=course.id %}"><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
         <a href="{% url 'course_detail' courselist_id=course.id %}"><i class="fa-solid fa-list"></i></a>
-        <a href=""><i class="fa-solid fa-user"></i></a>
+        <a href="{% url 'about' %}"><i class="fa-solid fa-info"></i></a>
     </footer>
 {% endblock %}
