Edit add and edit topics

--- a/src/courses/courselist/templates/add_topics.html
+++ b/src/courses/courselist/templates/add_topics.html
@@ -4,7 +4,7 @@
     <div class="course-heading">
         <a href="../" class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
         <div>
-            <h2>Add a new topic for {{ course.name }}</h2>
+            <h2>Add a new topic</h2>
         </div>
         <div></div>
     </div>
