--- a/src/courses/courselist/templates/edit_topic.html
+++ b/src/courses/courselist/templates/edit_topic.html
@@ -4,7 +4,7 @@
     <div class="course-heading">
         <a href="../.." class="primary"><i class="fa-solid fa-angle-left primary"></i></i></a>
         <div>
-            <h2>Edit {{ topic.title }}topic</h2>
+            <h2>Edit topic</h2>
         </div>
         <div></div>
     </div>
@@ -20,6 +20,6 @@
         <a href="{% url 'landing_page' %}"><i class="fa-solid fa-house"></i></a>
         <a href="../.."><i class="fa-solid fa-play" style="rotate: 180deg;"></i></a>
         <a href="../.."><i class="fa-solid fa-list"></i></a>
-        <a href=""><i class="fa-solid fa-user"></i></a>
+        <a href="{% url 'about' %}"><i class="fa-solid fa-info"></i></a>
     </footer>
 {% endblock %}
